--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.9'
 
 networks:
   wordpress:
@@ -35,6 +35,8 @@ services:
       SERVICE_NAME: mysql
     networks:
       - wordpress
+    volumes:
+      - ./mysql:/var/lib/mysql
 
   php:
     build:
